PPC64: RTM: Fix counter for aborts on nested transactions

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • b24
    • ppc
    • linux

        Currently PPC64 JVM is using the wrong bits in TEXASR register to get information about failures that occur in nested transactions. As a consequence some counters shown by -XX:+PrintPreciseRTMLockingStatistics are wrong making some RTM jtreg tests fail.

              Assignee:
              Gustavo Romero
              Reporter:
              Gustavo Romero
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: